<resources>
    <string name="app_name">MyTrip</string>
    <string name="descriptor">dummy string</string>
    <string name="google_maps">link placeholder</string>
    <string name="shofet_title">נחל השופט</string>
    <string name="dor_title">חוף דור-הבונים</string>
    <string name="sorek_title">שפך נחל שורק</string>
    <string name="red_title">הקניון האדום</string>
    <string name="ayun_title">נחל עיון ומפל התנור</string>
    <string name="gedi_title">עין גדי</string>
    <string name="ofir_title">מצפה אופיר</string>
    <string name="sharon_title">פארק אריאל שרון</string>
    <string name="meron_title">שמורת הר מירון</string>
    <string name="snir_title">נחל שניר-חצבני</string>
    <string name="cave_title">ארץ אלף המערות</string>
    <string name="shofet_link"><a href="https://www.google.com/maps/place/%D7%A0%D7%97%D7%9C+%D7%94%D7%A9%D%95%D7%A4%D7%98%E2%80%AD/@32.6329255,35.1196275,14z/data=!3m1!4b1!4m5!3m4!1s0x151da938675072a1:0x4f71ed74f60e8c06!8m2!3d32.628333!4d35.105822">מצא ב - Google Maps</a></string>
    <string name="dor_link"><a href="https://www.google.com/maps/place/%D7%97%D7%95%D7%A3+%D7%93%D7%95%D7%A8+%D7%94%D7%91%D7%95%D7%A0%D7%99%D7%9D%E2%80%AD/data=!4m2!3m1!1s0x151da0e9090f1f0b:0x94f3899cdf9c9490?sa=X&amp;ved=2ahUKEwi8sIqitfTpAhUBzqQKHVttB8cQ8gEwHHoECBAQBg">מצא ב - Google Maps</a></string>
    <string name="sorek_link"><a href="https://www.google.com/maps/place/%D7%92%D7%9F+%D7%9C%D7%90%D7%95%D7%9E%D7%99+%D7%A9%D7%A4%D7%9A+%D7%A0%D7%97%D7%9C+%D7%A9%D7%95%D7%A8%D7%A7%E2%80%AD/@31.9343163,34.7270034,17z/data=!3m1!4b1!4m5!3m4!1s0x1502c7b2667d6f17:0x9d2179d29db70715!8m2!3d31.9343163!4d34.7248147">מצא ב - Google Maps</a></string>
    <string name="red_link"><a href="https://www.google.com/maps/place/%D7%94%D7%A7%D7%A0%D7%99%D7%95%D7%9F+%D7%94%D7%90%D7%93%D7%95%D7%9D%E2%80%AD/@29.680915,34.883085,15z/data=!4m2!3m1!1s0x0:0xf1ef02420a933b6a?sa=X&amp;ved=2ahUKEwiv-O60uvTpAhUpzqYKHR1IBNoQ_BIwEnoECBEQCA">מצא ב - Google Maps</a></string>
    <string name="ayun_link"><a href="https://www.google.com/maps/place/%D7%A0%D7%97%D7%9C+%D7%A2%D7%99%D7%95%D7%9F%E2%80%AD/@33.2469016,35.6134071,13z/data=!4m5!3m4!1s0x151ebd89fb05b5c1:0xffff69047c2134f5!8m2!3d33.248915!4d35.578781">מצא ב - Google Maps</a></string>
    <string name="gedi_link"><a href="https://www.google.com/maps/place/%D7%A9%D7%9E%D7%95%D7%A8%D7%AA+%D7%98%D7%91%D7%A2+%D7%A2%D7%99%D7%9F+%D7%92%D7%93%D7%99%E2%80%AD/@31.4467076,35.4052317,14z/data=!4m8!1m2!2m1!1z16LXmdefINeS15PXmQ!3m4!1s0x150319df2b32f785:0x576346606ebbd9b7!8m2!3d31.4664!4d35.387983">מצא ב - Google Maps</a></string>
    <string name="ofir_link"><a href="https://www.google.com/maps/place/%D7%9E%D7%A6%D7%A4%D7%94+%D7%90%D7%95%D7%A4%D7%99%D7%A8%E2%80%AD/@32.8149212,35.6714178,15z/data=!4m5!3m4!1s0x151c1128cb016867:0x5d7791c1ac8a44bf!8m2!3d32.814904!4d35.662663">מצא ב - Google Maps</a></string>
    <string name="sharon_link"><a href="https://www.google.com/maps/place/%D7%A4%D7%90%D7%A8%D7%A7+%D7%90%D7%A8%D7%99%D7%90%D7%9C+%D7%A9%D7%A8%D7%95%D7%9F%E2%80%AD/@32.0304145,34.8238987,17z/data=!4m5!3m4!1s0x151d4ad8529dd8a1:0xfa1d81c546898022!8m2!3d32.03041!4d34.82171">מצא ב - Google Maps</a></string>
    <string name="meron_link"><a href="https://www.google.com/maps/place/%D7%94%D7%A8+%D7%9E%D7%99%D7%A8%D7%95%D7%9F%E2%80%AD/@32.9974992,35.420977,15z/data=!3m1!4b1!4m5!3m4!1s0x151c25957e8fe09d:0x3191286eed32bf40!8m2!3d32.9975!4d35.4122222">מצא ב - Google Maps</a></string>
    <string name="snir_link"><a href="https://www.google.com/maps/place/%D7%A0%D7%97%D7%9C+%D7%A9%D7%A0%D7%99%D7%A8%E2%80%AD/@33.2313146,35.6486663,13z/data=!3m1!4b1!4m5!3m4!1s0x151ebd1c0c00722f:0xa9796caef0ca196b!8m2!3d33.2313195!4d35.6136468">מצא ב - Google Maps</a></string>
    <string name="cave_link"><a href="https://www.google.com/maps/place/%D7%A4%D7%90%D7%A8%D7%A7+%D7%A2%D7%93%D7%95%D7%9C%D7%9D%E2%80%AD/@31.6447475,34.9630977,17z/data=!3m1!4b1!4m5!3m4!1s0x1502e9f010f2ab77:0x17415ee355346f6e!8m2!3d31.644743!4d34.960909">מצא ב - Google Maps</a></string>
    <string name="shofet_desc">איך מגיעים?\
הדרך הנוחה ביותר להגיע לשם היא מיקנעם מושבה.\
הגישה למושבה היא מצומת יקנעם בכביש 70 (ואדי מילק)
, שנמצא בסמוך לצומת התשבי. במושבה ממשיכים ישר בכביש עד סופה, וממש ליד הגדר שבין יקנעם לקיבוץ הזורע, פונים ימינה.
הכביש מתחלף בהמשך לדרך עפר בסימון שבילים אדום.
בדרך עוברים ליד בית הקברות. לאחר כ-900 מטר, רואים מימין את עין אמי.
רוב הרכבים חונים בצד הדרך - אנא, אל תנהגו כמוהם, המשיכו עוד 3 דקות, וחנו בחניון החרובים הסמוך באופן מסודר.
במקרים רבים, בעיקר בסוף השבוע, כשיש עומס בשמורה, סוגרים בני המושבה את השער המוביל לנחל השופט.
הנחל מתחיל את זרימתו ליד קיבוץ עין השופט ונשפך לנחל הקישון, צפון-מזרחית לקיבוץ הזורע.
בסוף החורף ובאביב מציפים את גדות הנחל מרבדי פרחים משלל סוגים,
כמו רקפת, כלנית מצויה, עיריוני צהוב, חרצית מצויה ועוד.
על גדות הנחל צומחים עצי ערבה, אולמוס שעיר, כמו גם שיחי פטל קדוש,
המעניקים בקיץ פרי עסיסי וטעים. מאחר והמים זורמים פה כל השנה מומלץ לבקר פה גם בקיץ.
לאורך הנחל יש מסלול מסומן בסימון שבילים אדום, שתחילתו ליד עין העמק וסיומו ליד קיבוץ הזורע.
הטיול המוצע כאן מעגלי ומתאים למשפחות. הוא מתחלק לשני סיורים: הקצר, שמשכו חצי שעה, והארוך, שמשכו 2-3 שעות.
בסוף העמוד תמצאו גם מסלול שאינו מעגלי לאורך כל נחל השופט, מתחילתו בכביש 672 ליד עין העמק ועד לעין אמי.
קק\'\'ל הכשירה על גדת הנחל גם שביל טיול מותאם לנכים. המסלול המוצע כאן מתחיל בחלק המזרחי של פארק יערות מנשה.
כאמור, בשבתות וחגים הוא עמוס למדי.
תאור המסלול הקצר\"עין חשרת (עין אמי): המעיין נמצא בצמוד לדרך העפר המגיע מקיבוץ הזורע, ונובע ליד משטח סלע גדול ובהיר.
המים נובעים כאן משלוש ניקבות חצובות, שתיים קטנות ואחת גדולה, שנובעת לתוך בריכה ריבועית. הסלע שמעל לנביעה
נחצב כמו קשת.יש החושבים שזהו חלק מנימפיאון רומי שבו קיימו פולחן מים ומתחת לקשת הוצב פסל האל שלכבודו
נערך הפולחן.קיבוץ הזורע טיפח את סביבת המעיין לזכרו של אמי ברנר, חבר הקיבוץ, שנפל בעת מילוי תפקידו. קק\'\'ל נטעה כאן, לא מזמן,
גם עצי קטלב וצמחי מים בינהם הנימפאה הכחולה.מעברה השני של דרך העפר המסומנת בסימון שבילים אדום
(לבן-אדום-לבן) יורד שביל קצר לעבר אפיק נחל השופט. השביל מוביל אל חורשה יפהפייה, בה נמצאים שרידי טחנת קמח.
בגלל טחנה זו ובגלל אחרות שמצויות בסביבה קראו ערביי הסביב לנחל ואדי טוואחין (נחל הטחנות).
ליד הטחנה שלט קטן המנציח את שמו של יהושע מרקס, חבר קיבוץ הזורע שנפל בגוש עציון במלחמת העצמאות.
ליד הנחל נפגוש בגשרון עץ.
אם נעבור אותו נגיע למקום יפה לפיקניק שבצידו מערה קטנה. המסלול עצמו אינו עובר על הגשר אלא ממשיך במעלה הנחל.
הדרך היא דרך סלולה המתאימה לכסאות גלגלים
ולעגלות תינוקות ועוברת בחלקה במנהרות קרירות ומוצלות שנוצרו בתוך סבך הקנה המצוי הניזון ממימי הנחל.
השביל ממשיך בערוץ הנחל,
אל פינת חמד - מפל קטנטן ולמרגלותיו בריכה יפה. ליד הבריכה צומח הרדוף הנחלים ועצי אולמוס שעיר,
הניכרים בעליהם המשוננים והבלתי סימטריים. אולמוס הוא עץ הצומח במקומות מעטים בישראל, תמיד בצדי נחלים זורמים.
בחורף עצים אלה קירחים. נמצאים פה גם עצי צפצפה, ערבה, אשחר ואף אורן שננטע בעל ידי קק\'\'ל.
מהבריכה נמשיך עם השביל במקביל לערוץ. נחלוף על פני סכר, המשמש את התחנה למדידת זרימת המים ונמשיך עד
שנגיע למקום בו ישנה אפשרות לעלות בחזרה לדרך העפר המסומנת בסימון שבילים אדום.
במסלול הקצר, מכאן חוזרים בחזרה כפי שבאנו או עולים לדרך העפר וחוזרים איתה עד עין אמי.
</string>
    <string name="dor_desc">איך מגיעים?\
מכביש החוף יורדים במחלף עתלית או בצומת פורדיס אל כביש 4. ממשיכים עד לפנייה למושב הבונים,
עוברים מעל הכביש ונוסעים אל חוף הים לפי השילוט (מקיפים את המושב מצפון).
למשתמשים בווייז: הקלידו “חוף דור” ובחרו בתוצאה “שמורת טבע חוף דור הבונים”.המסלול כפי שהוא מוצע פה אינו מעגלי,
ודורש להשאיר רכב אחד בתחילתו, ליד הבונים, ורכב אחד בסופו, בחוף דור.
מאחר והמסלול קצר, ניתן לטייל בו הלוך ושוב, וכך להפוך אותו למעגלי. כך ניתן גם לחזור אחורה בכל שלב.
מחיר: כניסה לשמורת חוף הבונים: 37 ש\"ח לרכב פרטי | כניסה לחניון חוף דור: ללא תשלום.טלפון לבירורים: 04-8252266
מרחבת החניה נצא מערבה ברגל בשביל המסומן בסימון שבילים אדום. לאחר כ-200 מטר נגיע למפרצון רווי בצדפים.
השביל ממשיך דרומה אל נקודת תצפית המשקיפה על נופי הכרמל ועל המפרצים הבונים של שמורת דור-הבונים.
השביל שלנו עובר ברכס הכורכר הסמוך לים. גלי הים מכים ברכס והם שיוצרים את המפרצים היפהפיים.
נפנה ימינה וכעבור כ-200 מטר נגיע אל מפרץ קטן ומיוחד, שהמטיילים מכנים אותו בשם המחייב המערה הכחולה.
מערה זו היא אחת מעשרות נקיקים ומערות, שפרצו גלי הים בכורכר.
השביל מושך מעט מזרחה, ולאחר כ-100 מטר נמצא עצמנו דורכים על סלע-חוף.
זהו סלע עתיק וקשה יחסית, שנוצר משברי צדפים וגרגירי חול מלוכדים, והוא תמיד נוטה בשיפוע קל לכיוון הים.
נמשיך דרומה ונעקוף מפרץ חולי כדי להגיע לגבעת כורכר.
כורכר הוא למעשה דיונה שהתגבשה והתאבנה, ובגבעות הכורכר החשופות לים נמצא צמחייה שעמידה לטיפות הרסס המלוחות:
נר הלילה החופי, שום גבוה, חוח עקוד, פרגה צהובה, חבצלת החוף ועוד.
פרחים אלו מעדיפים לפרוח בלילות הקיץ (יולי-אוגוסט),
משום שאז הרוח שקטה והחרקים המאביקים יכולים לעסוק במלאכתם ללא הפרעה.
נמשיך דרומה, ומראש הכורכר יתגלה לעינינו אי קטן.
מדרום לו שוכבת נטוייה על צדה ספינת משא טבועה. בהמשך השביל נראה שרידים של מחצבת כורכר ישנה.</string>
    <string name="favorite">אהבתי</string>
    <string name="settings">הגדרות</string>
    <string name="favorites">מועדפים</string>
    <string name="profile">פרופיל</string>
    <string name="search">חיפוש</string>
    <string name="register">הירשם</string>
    <string name="login">כניסה</string>
    <string name="title_activity_login">כניסה</string>
    <string name="prompt_email">אימייל</string>
    <string name="prompt_password">סיסמא</string>
    <string name="confirm_password">אימות סיסמא</string>
    <string name="wipe_btn">מחק בסיס נתונים</string>
    <string name="show_btn">הצג בסיס נתונים</string>
    <string name="theme_switch">ערכת נושא</string>
    <string name="logoff_btn">התנתק</string>
    <string name="no_trips_message">אין לך טיולים מועדפים</string>
    <string name="favs_title_string">הטיולים המועדפים שלך:</string>
    <string name="save_favs_string">שמור</string>
    <string name="user_mail_message">אימייל משתמש</string>
    <string name="profile_page_title">פרופיל משתמש</string>
</resources>