<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/sharp_favorite_border_black_18dp"
        android:title="@string/favorite"
        app:showAsAction="always"/>


    <item android:id="@+id/action_favorites"
    android:title="@string/favorites"
    app:showAsAction="never"/>

    <item android:id="@+id/action_profile"
    android:icon="@drawable/round_account_circle_black_18dp"
    android:title="@string/profile"
    app:showAsAction="always"/>


    <item android:id="@+id/action_login"
    android:title="@string/login"
    app:showAsAction="never"/>

    <item android:id="@+id/action_register"
    android:title="@string/register"
    app:showAsAction="never"/>

    <!--     Settings, should always be in the overflow-->
    <item android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never"/>

    <item android:id="@+id/action_search"
        android:icon="@drawable/round_search_black_18dp"
        android:title="@string/search"
        app:showAsAction="always"/>

</menu>